# OpenAgent

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  exceptions.py  loop.py  models.py  state.py  state_machine.py
app/chat/: __init__.py  exceptions.py  formatter.py  models.py  service.py
app/conversation/: __init__.py  models.py  tool_message.py
app/core/: __init__.py  config.py  exceptions.py  lifespan.py  logging.py
app/documents/: __init__.py  (+4 more)
docs/: api.md  architecture.md  deployment.md
tests/: test_agent_loop.py  test_agent_state.py  test_agent_state_machine.py  test_chat_formatter.py  test_chat_models.py  test_chat_service.py  test_config.py  test_conversation_models.py  test_default_retriever.py  test_default_runtime.py  test_document_chunker.py  test_document_loader.py  test_embedding_base.py  test_embedding_models.py  test_exceptions.py  test_function_tool.py  test_lifespan.py  test_logging.py  test_main.py  test_memory_vectorstore.py  test_openai_embedding_provider.py  test_openai_provider.py  test_prompt_builder.py  test_provider_base.py  test_provider_models.py  test_rag_context.py  test_rag_service.py  test_retriever_base.py  test_retriever_models.py  test_runtime_contract.py  test_runtime_tools.py  test_session_models.py  test_session_service.py  test_session_store.py  test_tool_base.py  test_tool_calling_contract.py  test_tool_executor.py  test_tool_message.py  test_tool_models.py  test_tool_registry.py  (+2 more)
(+48 files in other folders)
