[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aos"
version = "1.0.0"
description = "Personal Agent Operating System API"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "httpx",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "anyio",
    "black==25.1.0",
    "pip-tools",
    "pre-commit",
    "pytest",
    "ruff==0.12.4",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
